# autoagent

./: .env.example  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  jarvis.py  pyproject.toml
.github/workflows/: deploy.yml
app/: db.py  main.py
app/api/: schedules.py  tasks.py
app/tools/: registry.py  web_fetch.py  web_search.py
app/workers/: celery_app.py  schedule_runner.py  task_worker.py
contrib/: webhook-server.service
docker/caddy/: Caddyfile
docker/grafana/provisioning/alerting/: contactpoints.yml  policies.yml  rules.yml
docker/grafana/provisioning/dashboards/: dashboards.yml  stack-overview.json
docker/grafana/provisioning/datasources/: ds.yml
docker/landing/: admin.html  index.html
docker/loki/: loki-config.yml
docker/postgres/: init.sh
docker/prometheus/: prometheus.yml
docker/promtail/: promtail-config.yml
docker/synapse/: homeserver.yaml  log.config
scripts/: backup.sh  bootstrap.sh  deploy.sh  webhook-server.py
