[project]
name = "autoagent"
version = "0.1.0"
description = "Autonomous agent engineering"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "celery[redis]>=5.4.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "openai-agents",
    "pandas",
    "openpyxl",
    "numpy",
    "harbor",
]
